# embit

./: .gitignore  AGENTS.md  MANIFEST.in  README.md  RELEASING.md  constraints-dev.txt  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  package-content-verification.yml  release.yml
docs/: README.md  package-content-policy.md
docs/api/: README.md  _sidebar.md  networks.md
docs/api/ec/: _sidebar.md  public_key.md
docs/api/ext/: slip39.md
docs/api/ext/liquid/: README.md
src/embit/: misc.py  transaction.py
src/embit/descriptor/: miniscript.py
src/embit/ext/: slip39.py
src/embit/ext/liquid/: addresses.py  blip32.py  descriptor.py  finalizer.py  networks.py  pset.py  psetview.py  slip77.py  transaction.py
src/embit/ext/wordlists/: uslip39.py
src/embit/util/: ctypes_secp256k1.py  secp256k1.py
src/embit/wordlists/: uslip39.py
tests/: run_tests.py
tests/core/: __init__.py  test_bindings.py  test_bip32.py  test_bip85.py  test_descriptor.py  test_ecc.py  test_ecdh.py  test_psbtview.py
tests/ext/liquid/: test_psetview.py  test_threading.py
tests/integration/: run_tests.py
tests/integration/core/: test_psbt.py
tests/integration/ext/liquid/: test_pset.py
tests/integration/util/: rpc.py
tests/tests/: test_liquid.py  test_slip39.py
tools/: generate_release_sbom.py  verify_package_artifacts.py
